--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,14 @@ html {
 
 .body {
 font-family: 'Lato', sans-serif;
-max-width: 800px;
+max-width: 1000px;
 margin: auto;
-padding:10px;
+
+
 }
 
 .container {
-  margin-bottom:150px;
+margin: auto;
+  
 }
 
