--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,9 @@ margin: auto;
 }
 
 .container {
-margin: auto;
-  
+display:flex; 
+  align-items: baseline;
+  padding; 
+  justify-content: center;
 }
 
