--- a/css/element.css
+++ b/css/element.css
@@ -1,4 +1,4 @@
-.element {
+.pattern {
   overflow: auto;
   background-image: url("../images/background-pattern.jpg");
   background-repeat: space;
